--- a/package.json
+++ b/package.json
@@ -8,7 +8,15 @@
     "babel-runtime": "^6.20.0",
     "meteor-node-stubs": "~0.2.4"
   },
-  "devDependencies": {
-    "autoprefixer": "^7.1.1"
+  "devDependencies": {},
+  "postcss": {
+    "plugins": {
+      "postcss-sass": {},
+      "autoprefixer": {
+        "browsers": [
+          "last 3 versions"
+        ]
+      }
+    }
   }
 }
